--- a/upApp/app/src/main/res/layout/activity_login.xml
+++ b/upApp/app/src/main/res/layout/activity_login.xml
@@ -81,6 +81,21 @@
         android:layout_marginTop="128dp"
         android:text="@string/action_validar_usuario"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.059"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password" />
+
+    <TextView
+        android:id="@+id/txt_register"
+        android:layout_width="71dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="28dp"
+        android:clickable="true"
+        android:focusable="auto"
+        android:focusableInTouchMode="true"
+        android:text="@string/action_register_short"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password" />
 
