--- a/upApp/app/src/main/res/layout/activity_segundo.xml
+++ b/upApp/app/src/main/res/layout/activity_segundo.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.login.SegundoActivity">
 
     <EditText
-        android:id="@+id/txt_name"
+        android:id="@+id/txt__list_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
@@ -32,7 +32,7 @@
         android:hint="@string/lastname_user"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_name" />
+        app:layout_constraintTop_toBottomOf="@+id/txt__list_name" />
 
     <EditText
         android:id="@+id/txt_phone"
