--- a/upApp/app/src/main/res/layout/activity_edit_.xml
+++ b/upApp/app/src/main/res/layout/activity_edit_.xml
@@ -25,30 +25,30 @@
         android:textSize="20sp"
         android:layout_marginTop="10dp"
         />
+
     <EditText
+        android:id="@+id/ed_apellido"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Email"
+        android:layout_marginTop="10dp"
+        android:hint="Apellido"
+        android:textSize="20sp" />
+
+    <EditText
         android:id="@+id/ed_email"
-        android:textSize="20sp"
-        android:layout_marginTop="10dp"
-        />
-    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Contact"
-        android:id="@+id/ed_contact"
-        android:textSize="20sp"
         android:layout_marginTop="10dp"
-        />
+        android:hint="Email"
+        android:textSize="20sp" />
+
     <EditText
+        android:id="@+id/ed_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Address"
-        android:id="@+id/ed_address"
-        android:textSize="20sp"
         android:layout_marginTop="10dp"
-        />
+        android:hint="Password"
+        android:textSize="20sp" />
     <Button
         android:layout_width="match_parent"
         android:layout_height="55dp"
